Styling the yellow border

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
 
         <div id="desc">
-            <h3>Who We Are</h3>
+            <h3>Who We Are?</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, mollitia provident? Corporis enim, dolorem odit quam veniam vel provident officia recusandae minus delectus odio magni soluta voluptatibus in? Autem, omnis?Lorem ipsum dolor sit amet, consectetur adipisicing elit. At quod fugiat minus culpa asperiores quidem laboriosam veritatis sequi inventore? Veritatis praesentium optio itaque sed quos eum cupiditate qui enim incidunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta dignissimos expedita eveniet molestiae obcaecati odit maxime nostrum minus placeat exercitationem impedit, provident et, cupiditate maiores quibusdam, a blanditiis nobis neque?</p>
 
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum ducimus earum molestiae sed. In ipsam nostrum aspernatur, cum qui culpa consectetur fugit, hic tenetur dolor maiores expedita quod eligendi eaque! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore, vel omnis similique corporis rerum, illum repellendus labore architecto vitae temporibus eum harum, non laudantium repudiandae! Debitis explicabo cum ut eos?Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo fuga dolorem tenetur minima voluptatibus inventore eaque quibusdam rem ducimus earum aspernatur ab iure, beatae sapiente omnis assumenda, corrupti hic debitis.</p>
